# caffe

./: .gitignore  CMakeLists.txt  Makefile  conanfile.py  conanfile.txt  pyproject.toml  setup.py
.github/workflows/: cmake.yml  python-build.yml
cmake/: Dependencies.cmake  ProtoBuf.cmake  Summary.cmake  conan.cmake  configure-conan.cmake
examples/: CMakeLists.txt
include/caffe/layers/: ctc_loss_layer.hpp  reverse_layer.hpp
include/caffe/util/: io.hpp  math_functions.hpp
python/: CMakeLists.txt  requirements.txt  setup.py
python/caffe/: _caffe.cpp
src/caffe/: CMakeLists.txt  layer_factory.cpp
src/caffe/layers/: batch_norm_layer.cpp  reverse_layer.cpp
src/caffe/test/: CMakeLists.txt
src/caffe/util/: io.cpp
tools/: CMakeLists.txt
