[project]
requires-python = ">=3.6"

[build-system]
requires = ["setuptools>=42", "wheel", "conan", "oldest-supported-numpy", "ninja"]

[tool.cibuildwheel]
build = ["cp39-*"]
manylinux-x86_64-image = "sunnycase/manylinux_2_24_x86_64:version1.1"
test-requires = ["pytest", "pydot", "numpy==1.19"]
test-command = [
  "pytest {project}/python/caffe/test"
]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-all = [
  "choco install graphviz"
]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-all = [
  "apt update",
  "apt install graphviz -y",
  "pip install conan",
  "conan profile new default --detect",
  "conan profile update settings.compiler.libcxx=libstdc++11 default"
]
[tool.cibuildwheel.macos]
archs = ["x86_64"]
before-all = [
  "brew install graphviz"
]

[tool.cibuildwheel.macos.environment]
